Remove unused fonts from import in css

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="BareDit is a clean, lightweight Reddit web app with a minimalist interface for seamless browsing. Enjoy fast access to your favorite communities with an intuitive, ad-free design. Perfect for users who appreciate simplicity and efficiency."
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="%PUBLIC_URL%/favicon.svg" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
